chore: cleanup JDK_JAVA_OPTIONS and CATALINA_OPTS for better usage (#4133)